--- a/test-output/index.html
+++ b/test-output/index.html
@@ -127,12 +127,12 @@
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-AgJunction_API_check" title="com.qa.tester.GetAPIwithoutHeaders" hash-for-method="validateResponseData">validateResponseData</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-AgJunction_API_check" title="com.qa.tester.GetAPIwithHeaders" hash-for-method="validateResponseData">validateResponseData</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-AgJunction_API_check" title="com.qa.tester.GetAPIwithHeaders" hash-for-method="validateResponseData">validateResponseData</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-AgJunction_API_check" title="com.qa.tester.GetAPIwithoutHeaders" hash-for-method="validateResponseData">validateResponseData</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
@@ -162,49 +162,6 @@
     <div class="wrapper">
       <div class="main-panel-root">
         <div panel-name="suite-AgJunction_API_check" class="panel AgJunction_API_check">
-          <div class="suite-AgJunction_API_check-class-passed">
-            <div class="main-panel-header rounded-window-top">
-              <img src="passed.png"/>
-              <span class="class-name">com.qa.tester.GetAPIwithoutHeaders</span>
-            </div> <!-- main-panel-header rounded-window-top -->
-            <div class="main-panel-content rounded-window-bottom">
-              <div class="method">
-                <div class="method-content">
-                  <a name="getAPITestWithoutHeaders">
-                  </a> <!-- getAPITestWithoutHeaders -->
-                  <span class="method-name">getAPITestWithoutHeaders</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="validateHeadersInResponse">
-                  </a> <!-- validateHeadersInResponse -->
-                  <span class="method-name">validateHeadersInResponse</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="validateResponseData">
-                  </a> <!-- validateResponseData -->
-                  <span class="method-name">validateResponseData</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="validateResponseTime">
-                  </a> <!-- validateResponseTime -->
-                  <span class="method-name">validateResponseTime</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="validateStatusCode">
-                  </a> <!-- validateStatusCode -->
-                  <span class="method-name">validateStatusCode</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-            </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-AgJunction_API_check-class-passed -->
           <div class="suite-AgJunction_API_check-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
@@ -256,6 +213,49 @@
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
           </div> <!-- suite-AgJunction_API_check-class-passed -->
+          <div class="suite-AgJunction_API_check-class-passed">
+            <div class="main-panel-header rounded-window-top">
+              <img src="passed.png"/>
+              <span class="class-name">com.qa.tester.GetAPIwithoutHeaders</span>
+            </div> <!-- main-panel-header rounded-window-top -->
+            <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="getAPITestWithoutHeaders">
+                  </a> <!-- getAPITestWithoutHeaders -->
+                  <span class="method-name">getAPITestWithoutHeaders</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="validateHeadersInResponse">
+                  </a> <!-- validateHeadersInResponse -->
+                  <span class="method-name">validateHeadersInResponse</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="validateResponseData">
+                  </a> <!-- validateResponseData -->
+                  <span class="method-name">validateResponseData</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="validateResponseTime">
+                  </a> <!-- validateResponseTime -->
+                  <span class="method-name">validateResponseTime</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="validateStatusCode">
+                  </a> <!-- validateStatusCode -->
+                  <span class="method-name">validateStatusCode</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+            </div> <!-- main-panel-content rounded-window-bottom -->
+          </div> <!-- suite-AgJunction_API_check-class-passed -->
         </div> <!-- panel AgJunction_API_check -->
         <div panel-name="test-xml-AgJunction_API_check" class="panel">
           <div class="main-panel-header rounded-window-top">
@@ -266,6 +266,9 @@
 &lt;?xml version=&quot;1.0&quot; encoding=&quot;UTF-8&quot;?&gt;
 &lt;!DOCTYPE suite SYSTEM &quot;http://testng.org/testng-1.0.dtd&quot;&gt;
 &lt;suite thread-count=&quot;1&quot; guice-stage=&quot;DEVELOPMENT&quot; name=&quot;AgJunction API check&quot;&gt;
+  &lt;listeners&gt;
+    &lt;listener class-name=&quot;com.qa.extendReport.ExtentReporterNG&quot;/&gt;
+  &lt;/listeners&gt;
   &lt;test thread-count=&quot;1&quot; name=&quot;User-management&quot;&gt;
     &lt;classes&gt;
       &lt;class name=&quot;com.qa.tester.GetAPIwithHeaders&quot;/&gt;
@@ -314,48 +317,48 @@ data.addRows(10);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'getAPITestWithoutHeaders')
 data.setCell(0, 2, 'com.qa.tester.GetAPIwithoutHeaders')
-data.setCell(0, 3, 14486);
+data.setCell(0, 3, 2235);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'getAPITestWithHeaders')
 data.setCell(1, 2, 'com.qa.tester.GetAPIwithHeaders')
-data.setCell(1, 3, 1474);
+data.setCell(1, 3, 1431);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'PostAPItest')
 data.setCell(2, 2, 'com.qa.tester.PostAPITest')
-data.setCell(2, 3, 952);
+data.setCell(2, 3, 932);
 data.setCell(3, 0, 3)
-data.setCell(3, 1, 'validateResponseData')
-data.setCell(3, 2, 'com.qa.tester.GetAPIwithHeaders')
-data.setCell(3, 3, 16);
+data.setCell(3, 1, 'validateHeadersInResponse')
+data.setCell(3, 2, 'com.qa.tester.GetAPIwithoutHeaders')
+data.setCell(3, 3, 1);
 data.setCell(4, 0, 4)
-data.setCell(4, 1, 'validateHeadersInResponse')
-data.setCell(4, 2, 'com.qa.tester.GetAPIwithoutHeaders')
-data.setCell(4, 3, 1);
+data.setCell(4, 1, 'validateResponseData')
+data.setCell(4, 2, 'com.qa.tester.GetAPIwithHeaders')
+data.setCell(4, 3, 0);
 data.setCell(5, 0, 5)
-data.setCell(5, 1, 'validateResponseData')
+data.setCell(5, 1, 'validateResponseTime')
 data.setCell(5, 2, 'com.qa.tester.GetAPIwithoutHeaders')
 data.setCell(5, 3, 0);
 data.setCell(6, 0, 6)
-data.setCell(6, 1, 'validateResponseTime')
+data.setCell(6, 1, 'validateStatusCode')
 data.setCell(6, 2, 'com.qa.tester.GetAPIwithoutHeaders')
 data.setCell(6, 3, 0);
 data.setCell(7, 0, 7)
-data.setCell(7, 1, 'validateStatusCode')
-data.setCell(7, 2, 'com.qa.tester.GetAPIwithoutHeaders')
+data.setCell(7, 1, 'validateHeaders')
+data.setCell(7, 2, 'com.qa.tester.GetAPIwithHeaders')
 data.setCell(7, 3, 0);
 data.setCell(8, 0, 8)
-data.setCell(8, 1, 'validateStatusCode')
-data.setCell(8, 2, 'com.qa.tester.GetAPIwithHeaders')
+data.setCell(8, 1, 'validateResponseData')
+data.setCell(8, 2, 'com.qa.tester.GetAPIwithoutHeaders')
 data.setCell(8, 3, 0);
 data.setCell(9, 0, 9)
-data.setCell(9, 1, 'validateHeaders')
+data.setCell(9, 1, 'validateStatusCode')
 data.setCell(9, 2, 'com.qa.tester.GetAPIwithHeaders')
 data.setCell(9, 3, 0);
 window.suiteTableData['AgJunction_API_check']= { tableData: data, tableDiv: 'times-div-AgJunction_API_check'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 16 seconds</span>
+              <span class="suite-total-time">Total running time: 4 seconds</span>
               <div id="times-div-AgJunction_API_check">
               </div> <!-- times-div-AgJunction_API_check -->
             </div> <!-- times-div -->
@@ -388,69 +391,69 @@ return data;
               </div> <!-- configuration-class before -->
               <div class="test-method">
                 <span class="method-name">getAPITestWithHeaders</span>
-                <span class="method-start">29 ms</span>
+                <span class="method-start">22 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">validateHeaders</span>
-                <span class="method-start">1511 ms</span>
+                <span class="method-start">1457 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">validateResponseData</span>
-                <span class="method-start">1511 ms</span>
+                <span class="method-start">1457 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">validateStatusCode</span>
-                <span class="method-start">1527 ms</span>
+                <span class="method-start">1457 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">teardown</span>
-                <span class="method-start">1527 ms</span>
+                <span class="method-start">1457 ms</span>
               </div> <!-- configuration-class after -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">com.qa.tester.GetAPIwithoutHeaders</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
                 <span class="method-name">setup</span>
-                <span class="method-start">1527 ms</span>
+                <span class="method-start">1457 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
                 <span class="method-name">getAPITestWithoutHeaders</span>
-                <span class="method-start">1527 ms</span>
+                <span class="method-start">1457 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">validateHeadersInResponse</span>
-                <span class="method-start">16023 ms</span>
+                <span class="method-start">3693 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">validateResponseData</span>
-                <span class="method-start">16024 ms</span>
+                <span class="method-start">3694 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">validateResponseTime</span>
-                <span class="method-start">16024 ms</span>
+                <span class="method-start">3694 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">validateStatusCode</span>
-                <span class="method-start">16024 ms</span>
+                <span class="method-start">3694 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">teardown</span>
-                <span class="method-start">16024 ms</span>
+                <span class="method-start">3694 ms</span>
               </div> <!-- configuration-class after -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">com.qa.tester.PostAPITest</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">setup</span>
-                <span class="method-start">16024 ms</span>
+                <span class="method-start">3694 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">PostAPItest</span>
-                <span class="method-start">16024 ms</span>
+                <span class="method-start">3694 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">teardown</span>
-                <span class="method-start">16977 ms</span>
+                <span class="method-start">4626 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
